# pysort

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  sort_array.py
.github/workflows/: pytest.yml
pysort/: helper.py  mergesort.py  quicksort.py
tests/: test_sort_array.py
