[tool.poetry]
name = "pysort"
version = "0.1.0"
description = ""
authors = ["Patrick Wisotzki <pwisocodes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
numpy = "^1.22.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
